<resources>
    <string name="app_name">QuickMail</string>
    <string name="to">To:</string>
    <string name="irwin">Irwin</string>
    <string name="evans">Evans</string>
    <string name="caroline">Caroline</string>
    <string name="message">message</string>
    <string name="got_it">Got it</string>
    <string name="ok">ok</string>
    <string name="i_see">I see</string>
    <string name="call_me_back">Call me back</string>
    <string name="thanks">Thanks</string>
    <string name="send">send</string>
</resources>